--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vue-touch": "^2.0.0-beta.4",
+    "vuedraggable": "^2.14.1",
     "vuex": "^2.4.1",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
